--- a/public/less/admin/style.less
+++ b/public/less/admin/style.less
@@ -79,6 +79,42 @@ core-toolbar#admin-mainheader {
 	}
 }
 
+/** account setting dialog **/
+#admin-account-setting-dialog {
+  fieldset {
+    margin-top: 50px;
+
+    .form-body {
+      float:left;
+      width:100%;
+    }
+
+    legend {
+      font-size:16px;
+      margin-bottom:0px;
+
+      .title {
+        float:left;
+        line-height:35px;
+      }
+
+      paper-button {
+        font-size:12px;
+        position:absolute;
+        right:30px;
+
+        core-icon {
+          width:14px;
+          height:14px;
+        }
+      }
+
+    }
+
+  }
+}
+
+
 /** override editor style **/
 .editor-wrapper {
 	padding     :0px;
