--- a/app/views/admin_footbar.ejs
+++ b/app/views/admin_footbar.ejs
@@ -12,15 +12,17 @@
     <paper-input-decorator
       label="Username"
       floatingLabel
+      focused
     >
-      <input name="username" is="paper-input" readonly>
+      <input ng-model="username" name="username" is="paper-input" readonly>
     </paper-input-decorator>
 
     <paper-input-decorator
       label="Email"
       floatingLabel
+      focused
     >
-      <input name="email" is="paper-input" readonly>
+      <input ng-model="email" name="email" is="paper-input" readonly>
     </paper-input-decorator>
 
     <form name="accountSettingForm">
@@ -30,12 +32,22 @@
         <legend>
           <div class="title">Change Password</div>
           &nbsp;&nbsp;
-          <paper-button class="primary" role="button" tabindex="0">
+          <paper-button ng-click="submit('/admin/account/update/password')" class="primary" role="button" tabindex="0">
             <core-icon icon="check"></core-icon>&nbsp;SAVE
           </paper-button>
         </legend>
 
         <div class="form-body">
+
+          <paper-shadow
+            class="global-validator"
+            z="1"
+            ng-cloak
+            ng-show="formData.valid.global"
+          >
+            <core-icon icon="report-problem"></core-icon>
+            {{formData.error.global}}
+          </paper-shadow>
 
           <paper-input-decorator
             label="Old Password"
@@ -45,9 +57,12 @@
             <input name="oldPassword" is="paper-input"
               type="password"
               required
+              ng-model="formData.oldPassword"
+              ng-maxlength="10"
+              ng-minlength="4"
+              ng-keydown="hideGlobalValidation()"
             >
           </paper-input-decorator>
-
 
           <paper-input-decorator
             label="New Password"
@@ -57,6 +72,11 @@
             <input name="newPassword" is="paper-input"
               type="password"
               required
+              ng-model="formData.newPassword"
+              ng-change="checkNewPasswordMathing()"
+              ng-maxlength="10"
+              ng-minlength="4"
+              ng-keydown="hideGlobalValidation()"
             >
           </paper-input-decorator>
 
@@ -68,6 +88,9 @@
             <input name="repeatPassword" is="paper-input"
               type="password"
               required
+              ng-model="formData.repeatPassword"
+              ng-change="checkNewPasswordMathing()"
+              ng-keydown="hideGlobalValidation()"
             >
           </paper-input-decorator>
         </div>
