--- a/app/views/admin_setting.ejs
+++ b/app/views/admin_setting.ejs
@@ -1,4 +1,9 @@
-<%- include('header', {css:""}) %>
+<%- include('header', {
+  css         :
+  "<link rel='stylesheet' href='/css/admin.css' shim-shadowdom>" +
+  "<link rel='stylesheet' href='/css/admin/setting.css' shim-shadowdom>",
+  webcomponent: "<link rel='import' href='/webcomponent/admin_setting.html'>"
+}); %>
 
 <core-header-panel flex>
 
