--- a/app/views/blog_read_post.ejs
+++ b/app/views/blog_read_post.ejs
@@ -1,4 +1,9 @@
-<%- include('header', {css:""}) %>
+<%- include('header', {
+  css         :
+  "<link rel='stylesheet' href='/css/blog.css' shim-shadowdom>" +
+  "<link rel='stylesheet' href='/css/blog/read_post.css' shim-shadowdom>",
+  webcomponent: "<link rel='import' href='/webcomponent/blog_read_post.html'>"
+}); %>
 
 <core-header-panel flex>
 
