--- a/app/views/header.ejs
+++ b/app/views/header.ejs
@@ -5,10 +5,9 @@
   <meta name="viewport" content="width=device-width">
   <title><%-title %></title>
   <link rel="stylesheet" href="/css/style.css" shim-shadowdom>
-  <%-css %>
 
-  <script src="/components/webcomponentsjs/webcomponents.js"></script>
-  <link rel="import" href="/components/polymer/polymer.html">
+  <%- css %>
+  <%- webcomponent %>
 
   <script src="http://localhost:35729/livereload.js"></script>
 </head>
