build 스크립트 작성

--- a/app/views/auth.ejs
+++ b/app/views/auth.ejs
@@ -1,7 +1,5 @@
 <%- include('header', {
-  css         :
-  "<link rel='stylesheet' href='/css/admin.css' shim-shadowdom>" +
-  "<link rel='stylesheet' href='/css/admin/auth.css' shim-shadowdom>",
+  css         : "<link rel='stylesheet' href='/css/auth.css' shim-shadowdom>",
   webcomponent: "<link rel='import' href='/webcomponent/auth.html'>"
 }); %>
 
