--- a/public/less/blog_read_post.less
+++ b/public/less/blog_read_post.less
@@ -1,6 +1,7 @@
-/** blog **/
+/** blog read post **/
 
 @import 'style.less';
 @import './blog/variables.less';
 @import './common.less';
 @import './blog/style.less';
+@import './blog/read_post.less';
