--- a/app/views/admin_manage_post.ejs
+++ b/app/views/admin_manage_post.ejs
@@ -1,7 +1,5 @@
 <%- include('header', {
-  css         :
-  "<link rel='stylesheet' href='/css/admin.css' shim-shadowdom>" +
-  "<link rel='stylesheet' href='/css/admin/manage_post.css' shim-shadowdom>",
+  css         : "<link rel='stylesheet' href='/css/admin_manage_post.css' shim-shadowdom>",
   webcomponent: "<link rel='import' href='/webcomponent/admin_manage_post.html'>"
 }); %>
 
