--- a/app/views/blog_read_post.ejs
+++ b/app/views/blog_read_post.ejs
@@ -1,7 +1,5 @@
 <%- include('header', {
-  css         :
-  "<link rel='stylesheet' href='/css/blog.css' shim-shadowdom>" +
-  "<link rel='stylesheet' href='/css/blog/read_post.css' shim-shadowdom>",
+  css         : "<link rel='stylesheet' href='/css/blog_read_post.css' shim-shadowdom>",
   webcomponent: "<link rel='import' href='/webcomponent/blog_read_post.html'>"
 }); %>
 
