--- a/app/views/header.ejs
+++ b/app/views/header.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
   <title><%-title %></title>
-  <script src="../components/webcomponentsjs/webcomponents.js"></script>
+  <script src="/components/webcomponentsjs/webcomponents.js"></script>
 
   <%- css %>
   <%- webcomponent %>
