뷰 템플릿 전역변수 추가

--- a/app/views/header.ejs
+++ b/app/views/header.ejs
@@ -9,6 +9,9 @@
   <%- css %>
   <%- webcomponent %>
 
-  <script src="http://localhost:35729/livereload.js"></script>
+  <% if(mode == "development") { %>
+    <script src="http://localhost:35729/livereload.js"></script>
+  <% } %>
+
 </head>
 <body fullbleed vertical layout unresolved>
