--- a/app/views/blog_read_post.ejs
+++ b/app/views/blog_read_post.ejs
@@ -1,5 +1,6 @@
 <%- include('header', {
-  css         : "<link rel='stylesheet' href='/css/blog_read_post.css' shim-shadowdom>",
+  css         : "<link rel='stylesheet' href='/css/blog_read_post.css' shim-shadowdom>"
+  + "<link rel='stylesheet' href='/components/socjs/soc.min.css'>",
   webcomponent: "<link rel='import' href='/webcomponent/blog_read_post.html'>"
 }); %>
 
