--- a/app/views/admin_setting.ejs
+++ b/app/views/admin_setting.ejs
@@ -1,5 +1,6 @@
 <%- include('header', {
-  css         : "<link rel='stylesheet' href='/css/admin_setting.css' shim-shadowdom>",
+  css         : "<link rel='stylesheet' href='/css/admin_setting.css' shim-shadowdom>" +
+    "<link rel='shortcut icon' href='/img/favicon-admin.png'>",
   webcomponent: "<link rel='import' href='/webcomponent/admin_setting.html'>"
 }); %>
 
