--- a/app/views/blog_read_post.ejs
+++ b/app/views/blog_read_post.ejs
@@ -1,6 +1,7 @@
 <%- include('header', {
   css         : "<link rel='stylesheet' href='/css/blog_read_post.css' shim-shadowdom>"
-  + "<link rel='stylesheet' href='/components/socjs/soc.min.css'>",
+  + "<link rel='stylesheet' href='/components/socjs/soc.min.css'>"
+  + "<link rel='shortcut icon' href='/img/favicon.png'>",
   webcomponent: "<link rel='import' href='/webcomponent/blog_read_post.html'>"
 }); %>
 
