--- a/app/views/blog.ejs
+++ b/app/views/blog.ejs
@@ -1,5 +1,6 @@
 <%- include('header', {
-  css         : "<link rel='stylesheet' href='/css/blog.css' shim-shadowdom>",
+  css         : "<link rel='stylesheet' href='/css/blog.css' shim-shadowdom>" +
+    "<link rel='shortcut icon' href='/img/favicon.png'>",
   webcomponent: "<link rel='import' href='/webcomponent/blog.html'>"
 }); %>
 
