이미지 아이콘 변경

--- a/app/views/admin_topbar.ejs
+++ b/app/views/admin_topbar.ejs
@@ -4,12 +4,9 @@
   <core-toolbar id="admin-mainheader" ng-controller="AdminTopMenu">
 <% } %>
 
-  <% if (username) { %>
-    <paper-icon-button icon="menu" class="primary"></paper-icon-button>
-  <% } %>
   <!-- branding -->
+  <img src="/img/brand.png" class="brand-icon">
   <span flex>Invention4</span>
-
 
   <!-- menu buttons -->
   <div relative>
