--- a/public/less/admin/style.less
+++ b/public/less/admin/style.less
@@ -11,6 +11,11 @@
   font-weight  : bold;
 }
 
+.brand-icon {
+   margin-left:12px;
+   margin-right:10px;
+}
+
 paper-dropdown {
   position  : absolute!important;
   top       : 38px!important;
