--- a/public/less/blog/style.less
+++ b/public/less/blog/style.less
@@ -50,7 +50,8 @@ paper-shadow.content-box {
 }
 
 paper-shadow.content-box.summary {
-	height: 200px;
+	height  : 200px;
+	overflow: hidden;
 }
 
 // about dialog
