이미지 경로 오류 수정, 반응형 css 오류 수정

--- a/public/less/blog/style.less
+++ b/public/less/blog/style.less
@@ -26,7 +26,7 @@ paper-shadow.content-box {
   box-sizing   : border-box;
   width        : 100%;
 
-  margin       : 16px;
+  margin       : 16px 0px;
   padding      : 10px;
   padding-left :25px;
   padding-right:25px;
@@ -46,11 +46,11 @@ paper-shadow.content-box {
 
 .nav-buttons {
 	margin-top:20px;
-	margin-left:10px;
+	margin-left:0px;
 }
 
 paper-shadow.content-box.summary {
-	height  : 200px;
+	height    : 200px;
 	overflow: hidden;
 }
 
